--- a/Makefile-teacher
+++ b/Makefile-teacher
@@ -1,23 +1,15 @@
 CFLAGS = -Wall -pedantic -ansi
 CC = gcc
 
-OUTPUTS = $(INPUTS:input-%.txt=diffs-%.txt)
-EXERCISES = $(wildcard bundle/esercizio-*/.)
+OUTPUTS = $(INPUTS:input-%.txt=output-%.txt)
+EXERCISES = $(wildcard ./esercizio-*/.)
 
-.PHONY: clean tclean outs evals $(EXERCISES)
-
-evals: $(EXERCISES) ;
-
-$(EXERCISES):
-	$(MAKE) -C $@ eval.txt
-
-clean:
-	for e in $(EXERCISES); do $(MAKE) -C $$e tclean; done
-
-tclean: pulisci
-	@rm -f output-*.txt eval.txt
+.PHONY: outs clean revals rclean $(EXERCISES)
 
 outs: $(OUTPUTS) ;
+
+clean: pulisci
+	@rm -f output-*.txt eval.txt
 
 .PRECIOUS: output-%.txt
 
@@ -26,3 +18,11 @@ output-%.txt: input-%.txt args-%.txt $(TARGET)
 
 eval.txt: $(DIFFS)
 	wc -l $(DIFFS) > eval.txt
+
+revals: $(EXERCISES) ;
+
+$(EXERCISES):
+	$(MAKE) -C $@ eval.txt
+
+rclean:
+	for e in $(EXERCISES); do $(MAKE) -C $$e clean; done
