Fixing no-newline

--- a/support/Makefile
+++ b/support/Makefile
@@ -81,11 +81,10 @@ actual-%.txt: input-%.txt args-%.txt $(TARGET)
 
 diffs-%.txt: output-%.txt actual-%.txt
 	@echo diff -b $^ \> $@
-	@diff -b $^ > $@ 2> /dev/null || true
+	@bash -c "diff -b <( sed -e '$$a\' actual-$*.txt ) <( sed -e '$$a\' output-$*.txt ) > $@" 2> /dev/null || true
 	@if [ -s $@ ]; then\
 	 	$(red);\
 	 	cat $@;\
 		$(reset);\
 		if $(exit_on_fail); then exit 1; fi;\
-	fi;\
-	echo "test:$*: ok"
+	fi
