--- a/test/makefiles
+++ b/test/makefiles
@@ -44,7 +44,7 @@ assert() {
 
 export MAKEFILES=$(pwd)/support/Makefile
 
-tempdir=$(mktemp -d /tmp/vulcan-XXXXXXXXX) || exit 1
+tempdir=$(mktemp -d /tmp/cu-XXXXXXXXX) || exit 1
 cd $tempdir
 
 touch args-0.txt input-0.txt
@@ -64,7 +64,5 @@ assert "Timeout" "" "" "execution timeout"
 
 echo 'int main( void ) { int *x=0; *x=1; return 0; }' > soluzione.c
 assert "Segfault" "" "" "segmentation fault"
-
-cd ..
 
 chmod -R u+rwx $tempdir; rm -rf $tempdir
