--- a/test/makefiles
+++ b/test/makefiles
@@ -10,9 +10,11 @@ assert() {
 				echo -n OK
 			else
 				echo -n FAIL, stdout: "$res"
+				exit 1
 			fi
 		else
 			echo -n FAIL, stderr: "$(cat err)"
+			exit 1
 		fi
 	else
 		echo -n 'FAIL [make failed]'
@@ -24,6 +26,7 @@ assert() {
 		rm -f err
 		if make -e pulisci test $2 > /dev/null 2> err; then
 			echo 'NOT FAILED [make]'
+			exit 1
 		else
 			if [ -z "$4" ] ||  grep -q "$4" err; then
 				res="$(diff output-0.txt actual-0.txt 2>/dev/null | grep -E '^(<|>)' | tr \\n \#)"
@@ -31,6 +34,7 @@ assert() {
 					echo OK.
 				else
 					echo FAIL, stdout: "$res".
+					exit 1
 				fi
 			else
 				echo FAIL, stderr: "$(cat err)".
@@ -52,6 +56,8 @@ echo -n AB > output-0.txt
 echo -e '#include <stdio.h>\nint main( void ) { printf( "AB" ); return 0; }' > soluzione.c
 
 assert "No error" "" "" "" NF
+
+assert "Truncate" "max_output=1" "< AB#> A#" ""
 
 echo 'int main( void ) { return 0; }' > soluzione.c
 assert "Diff" "" "< AB#"
