Added source encoding to Java (to overcome the fact that the runner forces LC_ALL=C)

--- a/support/Makefile
+++ b/support/Makefile
@@ -8,7 +8,7 @@ ifeq ($(strip $(CSOURCES)),)
 	SOURCES = $(JSOURCES)
 	OBJECTS = $(SOURCES:.java=.class)
 	JAVAC = javac
-	compile = $(JAVAC) $<
+	compile = $(JAVAC) -encoding utf8 $<
 else
 	ccode = 1
 	SOURCES = $(CSOURCES)
